# aeneas

./: pyproject.toml  setup.py
.github/workflows/: ci.yml
aeneas/: textfile.py  wavfile.py
aeneas/cdtw/: cdtw_setup.py
aeneas/cmfcc/: cmfcc_setup.py
aeneas/cwave/: cwave_setup.py
aeneas/tests/: test_textfile.py
